--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         </div>
     </div>
     <!--Fin de carrito-->
+    <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
