--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
-    <title>Javascript final</title>
+    <title>Javascript final - Valentina Rodriguez Vidal</title>
     <script src="https://kit.fontawesome.com/0abf0ec85b.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -14,7 +14,7 @@
             <span class="nav-icon">
                 <i class="fas fa-bars"></i>
             </span>
-            <h1>Patisserie</h1>
+            <h1>Dulce tentación</h1>
             <div class="cart-btn">
                 <span class="nav-icon">
                     <i class="fas fa-cart-plus"></i>
@@ -65,3 +65,4 @@
     <script src="main.js"></script>
 </body>
 </html>
+
